crates/pardosa-genome/tests/compile_fail/serde_untagged.rs
use pardosa_genome::GenomeSafe;

#[derive(GenomeSafe)]
#[serde(untagged)]
enum Bad {
    A(u32),
    B(String),
}

fn main() {}
